# ros_assignment

./: CMakeLists.txt  README.md  package.xml  setup.py
cfg/: Hsv.cfg
config/: multi_navigation_goals.yaml  navigation_goals.yaml
launch/: amcl.launch  cluster_segmentation.launch  grape_2d_segmentation.launch  register_depth.launch  registered_depth.launch  ros_assignment.launch  thorvald_bringup.launch
maps/: test_new_map.yaml
msg/: DetectedObject.msg
scripts/: grape.py  set_topo_nav_goal.py
src/: ClusterSegmentation.cpp
srv/: getGrapes.srv
